--- a/sistema/templates/sistema/pagjogo.html
+++ b/sistema/templates/sistema/pagjogo.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
@@ -7,8 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shCFF2z/mIEHRYJBLBFC2Ibbm4uKdYtIbbVfS" crossorigin="anonymous">
-        <link rel="stylesheet" href="./static/sistema/pagjogo.css">
-        
+        <link rel="stylesheet" href="{% static 'sistema/styles/pagjogo.css' %}">
 
         {% block head %} {% endblock %}
         <title>Checkpoint</title>
