Co-authored-by: Clara Machado  <ClaraMachadoAj@users.noreply.github.com> Co-authored-by: Antonio Paulo Barros <apabsp@users.noreply.github.com> Co-authored-by: João Pedro <JotaPeans@users.noreply.github.com>

--- a/sistema/templates/sistema/pagjogo.html
+++ b/sistema/templates/sistema/pagjogo.html
@@ -55,9 +55,9 @@
         <h1>Teste de página<h1>
             <p>aqui é a página do jogo!</p>
             <h2>wishlist<h2>
-                <form method="POST" action="{% url 'gameView'%}"> 
+                <form method="POST"> 
                     <button value="{}">wishlist</button>
-                </form>
+                </form>             
         {% endblock %}
     </body>
     {% endblock %}
