--- a/autenticacao/templates/autenticacao/signin.html
+++ b/autenticacao/templates/autenticacao/signin.html
@@ -12,7 +12,8 @@
             <div class="flex-1"></div>
             <h1>Login</h1>
             
-            <form class="flex-1" action="">
+            <form class="flex-1" method="POST">
+                {% csrf_token %}
                 <input class="poppins-regular" placeholder="Usuário" type="text" name="username">
                 <input class="poppins-regular" placeholder="Senha" type="password" name="password">
                 <button class="poppins-semibold">Sign in</button>
