--- a/autenticacao/templates/autenticacao/signup.html
+++ b/autenticacao/templates/autenticacao/signup.html
@@ -12,13 +12,22 @@
             <div class="flex-1"></div>
             <h1>Sign up</h1>
 
-            <form class="" action="">
+            <form class="" method="POST">
+                {% csrf_token %}
                 <input class="poppins-regular" placeholder="Usuário" type="text" name="username">
                 <input class="poppins-regular" placeholder="Email" type="email" name="email">
                 <input class="poppins-regular" placeholder="Senha" type="password" name="password">
                 <input class="poppins-regular" placeholder="Confirme a Senha" type="password" name="c-password">
                 <button class="poppins-semibold">Sign up</button>
             </form>
+            
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="">
+                        {{message}}
+                    </div>
+                {% endfor %}
+            {% endif %}
     
             <div class="container-row flex-1">
                 <p class="poppins-medium tiny">Já possui uma conta?</p>
