--- a/sistema/templates/sistema/pagjogo.html
+++ b/sistema/templates/sistema/pagjogo.html
@@ -2,64 +2,60 @@
 
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'sistema/styles/pagjogo.css' %}">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'sistema/styles/pagjogo.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-        {% block head %} 
-        <title>Checkpoint</title>
-    </head>
-    <body class="poppins-medium">
+    {% block head %}
+    <title>Checkpoint</title>
+</head>
+<body class="poppins-medium">
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+{% endblock %}
+
+{% block body %}
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Nome do Jogo</h1>
+            <p>Descrição do jogo aqui.</p>
+            <h2>Wishlist</h2>
+            <form method="POST">
+                <button class="btn btn-primary" type="submit">Adicionar à Wishlist</button>
             </form>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
+        </div>
+        <div class="col-md-6">
+            <h2>Avaliação</h2>
+            <div class="rating">
+                <input type="radio" id="star5" name="rating" value="5">
+                <label for="star5">5 stars</label>
+                <input type="radio" id="star4" name="rating" value="4">
+                <label for="star4">4 stars</label>
+                <input type="radio" id="star3" name="rating" value="3">
+                <label for="star3">3 stars</label>
+                <input type="radio" id="star2" name="rating" value="2">
+                <label for="star2">2 stars</label>
+                <input type="radio" id="star1" name="rating" value="1">
+                <label for="star1">1 star</label>
             </div>
-        </nav>
+            <h2>Comentários</h2>
+            <form>
+                <div class="form-group">
+                    <label for="comment">Comentário:</label>
+                    <textarea class="form-control" id="comment" rows="3"></textarea>
+                </div>
+                <button class="btn btn-primary" type="submit">Enviar</button>
+            </form>
+        </div>
+    </div>
+</div>
 
-        {% block body %} 
-        <h1>Teste de página<h1>
-            <p>aqui é a página do jogo!</p>
-            <h2>wishlist<h2>
-                <form method="POST"> 
-                    <button value="{}">wishlist</button>
-                </form>             
-        {% endblock %}
-    </body>
-    {% endblock %}
+
+</body>
+{% endblock %}
 </html>
-
